versions/v3.7.0/build/dts/api/bindings/w1/maxim,ds2485.md
---
version: v3.7.0
source_url: https://docs.zephyrproject.org/3.7.0/build/dts/api/bindings/w1/maxim,ds2485.html
original_path: build/dts/api/bindings/w1/maxim,ds2485.html
---

This is the documentation for the latest (main) development branch of
Zephyr. If you are looking for the documentation of previous releases, use
the drop-down list at the bottom of the left panel and select the desired version.

# maxim,ds2485 (on i2c bus)

Vendor: [Maxim Integrated Products](../../bindings.md#dt-vendor-maxim)

## Description

These nodes are “w1” bus nodes.

```text
This is a representation of the Maxim DS2485 I2C 1-Wire master w/ memory
```

## Properties

Node specific propertiesDeprecated node specific propertiesBase properties

Properties not inherited from the base binding file.

| Name | Type | Details |
| --- | --- | --- |
| `active-pullup` | `boolean` | ```text Enable the active pullup for the 1-Wire bus. ``` |
| `supply-gpios` | `phandle-array` | ```text GPIO specifier that controls power to the device.  This property should be provided when the device has a dedicated switch that controls power to the device.  The supply state is entirely the responsibility of the device driver.  Contrast with vin-supply. ``` |
| `vin-supply` | `phandle` | ```text Reference to the regulator that controls power to the device. The referenced devicetree node must have a regulator compatible.  This property should be provided when device power is supplied by a shared regulator.  The supply state is dependent on the request status of all devices fed by the regulator.  Contrast with supply-gpios.  If both properties are provided then the regulator must be requested before the supply GPIOS is set to an active state, and the supply GPIOS must be set to an inactive state before releasing the regulator. ``` |
| `switching-threshold` | `string` | ```text Default Low-to-High Switching Threshold.  Only the following values are allowed:   low:     0.25 x VCC, no hysteresis   medium:  0.40 x VCC, no hysteresis (recommended for most configurations)   high:    0.75 x VCC, with hysteresis   off:     off (chip reset value) ```  This property is **required**.  Legal values: `'low'`, `'medium'`, `'high'`, `'off'` |
| `active-pull-threshold` | `string` | ```text Default Active Pullup on Threshold configuration. For configurations with a single slave a "low" active pull threshold is recommended.  Only the following values are allowed:   low:     0.25 x VCC (recommended for most configurations)   medium:  0.40 x VCC   high:    0.75 x VCC   off:     off (chip reset value) ```  This property is **required**.  Legal values: `'low'`, `'medium'`, `'high'`, `'off'` |
| `weak-pullup` | `string` | ```text Default 1-Wire Weak Pullup Resistance in ohms. For most configurations with a single slave "1000" ohms are recommended, but some devices and multidrop configurations might need a stronger pullup.  To enter floating condition, it is suggested to switch the weak-pull up to extern and disable the switching as well as the active-pull threshold.  Only the following values are allowed:   "extern" (chip reset value)   "500"   "1000" (recommended for most configurations)   "333" ```  This property is **required**.  Legal values: `'extern'`, `'500'`, `'1000'`, `'333'` |
| `standard-slew` | `int` | ```text Default slew for standard speed mode in ns. Only the following values are allowed:   50   150   (default; chip reset value)   1300 ```  Default value: `150`  Legal values: `50`, `150`, `1300` |
| `overdrive-slew` | `int` | ```text Default slew for overdrive speed mode in ns. Only the following values are allowed:   50    (default; chip reset value)   150 ```  Default value: `50`  Legal values: `50`, `150` |

Deprecated properties not inherited from the base binding file.

(None)

Properties inherited from the base binding file, which defines
common properties that may be set on many nodes. Not all of these
may apply to the “maxim,ds2485” compatible.

| Name | Type | Details |
| --- | --- | --- |
| `wakeup-source` | `boolean` | ```text Property to identify that a device can be used as wake up source.  When this property is provided a specific flag is set into the device that tells the system that the device is capable of wake up the system.  Wake up capable devices are disabled (interruptions will not wake up the system) by default but they can be enabled at runtime if necessary. ``` |
| `power-domain` | `phandle` | ```text Power domain the device belongs to.  The device will be notified when the power domain it belongs to is either suspended or resumed. ``` |
| `zephyr,pm-device-runtime-auto` | `boolean` | ```text Automatically configure the device for runtime power management after the init function runs. ``` |
| `zephyr,disabling-power-states` | `phandles` | ```text List of power states that will disable this device power. ``` |
| `status` | `string` | ```text indicates the operational status of a device ```  Legal values: `'ok'`, `'okay'`, `'disabled'`, `'reserved'`, `'fail'`, `'fail-sss'`  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `compatible` | `string-array` | ```text compatible strings ```  This property is **required**.  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `reg` | `array` | ```text register space ```  This property is **required**.  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `reg-names` | `string-array` | ```text name of each register space ``` |
| `interrupts` | `array` | ```text interrupts for device ```  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `interrupts-extended` | `compound` | ```text extended interrupt specifier for device ``` |
| `interrupt-names` | `string-array` | ```text name of each interrupt ``` |
| `interrupt-parent` | `phandle` | ```text phandle to interrupt controller node ``` |
| `label` | `string` | ```text Human readable string describing the device (used as device_get_binding() argument) ```  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information.  This property is **deprecated**. |
| `clocks` | `phandle-array` | ```text Clock gate information ``` |
| `clock-names` | `string-array` | ```text name of each clock ``` |
| `#address-cells` | `int` | ```text number of address cells in reg property ``` |
| `#size-cells` | `int` | ```text number of size cells in reg property ``` |
| `dmas` | `phandle-array` | ```text DMA channels specifiers ``` |
| `dma-names` | `string-array` | ```text Provided names of DMA channel specifiers ``` |
| `io-channels` | `phandle-array` | ```text IO channels specifiers ``` |
| `io-channel-names` | `string-array` | ```text Provided names of IO channel specifiers ``` |
| `mboxes` | `phandle-array` | ```text mailbox / IPM channels specifiers ``` |
| `mbox-names` | `string-array` | ```text Provided names of mailbox / IPM channel specifiers ``` |
| `zephyr,deferred-init` | `boolean` | ```text Do not initialize device automatically on boot. Device should be manually initialized using device_init(). ``` |
